plugins {
    id 'java-library'
}

group = 'com.qiplat'
version = '0.0.13'

java {
    sourceCompatibility = JavaVersion.VERSION_22
    targetCompatibility = JavaVersion.VERSION_22
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ['--enable-preview']
}

test {
    useJUnitPlatform()
    jvmArgs '--enable-preview', '--enable-native-access=ALL-UNNAMED'
}